log
Sun, Oct  5, 2025  9:06:21 PM: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  2|4
total_score: 15/70
3f0e54c
Sun, Oct  5, 2025  9:23:47 PM: 
 sudoku.c | 48 ++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 44 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
c85a0c4
Sun, Oct  5, 2025  9:40:16 PM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
29bb8b5
Sun, Oct  5, 2025  9:47:10 PM: 
 sudoku.c | 29 ++++++++++++++---------------
 1 file changed, 14 insertions(+), 15 deletions(-)
 tests:  6|2
total_score: 45/70
328725c
Sun, Oct  5, 2025  9:51:56 PM: 
 sudoku.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  6|2
total_score: 45/70
c5f6680
Sun, Oct  5, 2025 10:06:37 PM: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
2ac33ff
Sun, Oct  5, 2025 10:10:12 PM: 
 sudoku.c | 38 +++++++++++++++++++++++++++++++++++---
 1 file changed, 35 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:155:24: error: implicit declaration of function 'firstList' [-Werror=implicit-function-declaration]
         for (Node* h = firstList(adj); h != NULL; h = nextList(adj)){
                        ^~~~~~~~~
sudoku.c:155:24: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:155:9: error: declaration of non-variable 'firstList' in 'for' loop initial declaration
         for (Node* h = firstList(adj); h != NULL; h = nextList(adj)){
         ^~~
sudoku.c:155:55: error: implicit declaration of function 'nextList' [-Werror=implicit-function-declaration]
         for (Node* h = firstList(adj); h != NULL; h = nextList(adj)){
                                                       ^~~~~~~~
sudoku.c:155:53: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         for (Node* h = firstList(adj); h != NULL; h = nextList(adj)){
                                                     ^
cc1.exe: all warnings being treated as errors
38692ba
Sun, Oct  5, 2025 10:15:44 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
C:\Users\felip\AppData\Local\Temp\ccCZzTsy.o: In function `DFS':
C:\Users\felip\OneDrive\Escritorio\lab5-FelipePoirier\lab-5-resolviendo-el-sudoku-Pipe240/sudoku.c:158: undefined reference to `firstList'
C:\Users\felip\OneDrive\Escritorio\lab5-FelipePoirier\lab-5-resolviendo-el-sudoku-Pipe240/sudoku.c:158: undefined reference to `nextList'
collect2.exe: error: ld returned 1 exit status
638cb17
Sun, Oct  5, 2025 10:15:49 PM: 
Compilation failed
C:\Users\felip\AppData\Local\Temp\ccoiDdUS.o: In function `DFS':
C:\Users\felip\OneDrive\Escritorio\lab5-FelipePoirier\lab-5-resolviendo-el-sudoku-Pipe240/sudoku.c:158: undefined reference to `firstList'
C:\Users\felip\OneDrive\Escritorio\lab5-FelipePoirier\lab-5-resolviendo-el-sudoku-Pipe240/sudoku.c:158: undefined reference to `nextList'
collect2.exe: error: ld returned 1 exit status
b8bfca6
Sun, Oct  5, 2025 10:21:14 PM: 
 sudoku.c | 24 ++++++++----------------
 1 file changed, 8 insertions(+), 16 deletions(-)
 tests:  10|0
total_score: 70/70
3d2899e
